--- a/src/components/FlowerFilter/FlowerFilter.module.scss
+++ b/src/components/FlowerFilter/FlowerFilter.module.scss
@@ -44,6 +44,7 @@
     }
 
     .priceRange {
+        padding-left: 22px;
         position: relative;
         
         .input__range {
@@ -51,5 +52,32 @@
             position: absolute;
         }
     }    
+
+    .price__amount {
+        margin-left: -10px;
+        margin-bottom: 16px;
+        font-size: 15px;
+        line-height: 16px;
+        color: #3D3D3D;
+
+        .amount {
+            color: $green;
+            font-weight: 900;
+        }
+
+    }
+    .filter__btn {
+        margin-left: -10px;
+
+        button {
+            padding: 8px 25px;
+            font-weight: 700;
+            font-size: 15px;
+            line-height: 16px;
+            border-radius: 6px;
+            background-color: $green;
+            color: #FFFFFF;
+        }
+    }
 
 }
