--- a/src/components/FlowerFilter/Pagination/Pagination.module.scss
+++ b/src/components/FlowerFilter/Pagination/Pagination.module.scss
@@ -2,7 +2,7 @@
 
 .pagination {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     
     &__wrapper {
         display: flex;
