add: findmore component

--- a/src/components/FlowerFilter/FlowerFilter.module.scss
+++ b/src/components/FlowerFilter/FlowerFilter.module.scss
@@ -1,6 +1,8 @@
 @import '../../assets/styles/GlobalStyles.module.scss';
 
 .flowerFilter {
+    margin-bottom: 73px;
+
     .container {
         display: grid;
         grid-template-columns: 310px auto;
