--- a/src/components/BlogPosts/BlogPost.module.scss
+++ b/src/components/BlogPosts/BlogPost.module.scss
@@ -5,11 +5,20 @@
     padding-bottom: 50px;
 
     .section__title {
+        margin-bottom: 15px;
         font-weight: 700;
         font-size: 30px;
         line-height: 16px;
         text-align: center;
         color: #3D3D3D;
+
+        & + p {
+            margin-bottom: 35px;
+            font-size: 14px;
+            line-height: 24px;
+            text-align: center;
+            color: #727272;
+        }
     }
 
     .card__wrapper {
