--- a/src/components/FlowerFilter/FlowerFilter.module.scss
+++ b/src/components/FlowerFilter/FlowerFilter.module.scss
@@ -88,6 +88,5 @@
     margin-bottom: 58px;
     display: grid;
     grid-template-columns: repeat(3, minmax(250px, 300px) );
-    grid-column-gap: 33px;
-    grid-row-gap: 58px;
+    grid-gap: 20px;
 }
