--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -113,6 +113,7 @@
     padding: 30px 0;
     display: grid;
     grid-template-columns: 2fr 2fr 2fr 3fr;
+    background-color: #FBFBFB;
 }
 
 .footer__nav > div {
